# RNTupleTTreeChecker

./: CMakeLists.txt  Checker.cxx  Checker.hxx  CheckerCLI.cxx  CheckerCLI.hxx  CheckerTests.cxx  README.md  main.cxx
testfiles/: createMR  createMT  mrn.root  mtt.root  multiple_rntuples.root  multiple_ttrees.root  simple_rntuple.root  simple_ttree.root
